prompts for AWS credentials

--- a/metaflow_exercise.ipynb
+++ b/metaflow_exercise.ipynb
@@ -55,14 +55,15 @@
       },
       "outputs": [],
       "source": [
-        "!(if [ ! -d \"metaflow-demo\" ]; then \\\n",
-        "    git clone https://github.com/karimmohraz/metaflow metaflow-demo; \\\n",
-        "  fi)\n",
-        "!(if [ ! -d ~/.metaflowconfig ]; then \\\n",
-        "    mkdir ~/.metaflowconfig; \\\n",
-        "    cp metaflow-demo/config.json ~/.metaflowconfig; \\\n",
-        "  fi)\n",
-        "%cd metaflow-demo"
+        "### sync from github ###\n",
+        "# !(if [ ! -d \"metaflow-demo\" ]; then \\\n",
+        "#     git clone https://github.com/karimmohraz/metaflow metaflow-demo; \\\n",
+        "#   fi)\n",
+        "# !(if [ ! -d ~/.metaflowconfig ]; then \\\n",
+        "#     mkdir ~/.metaflowconfig; \\\n",
+        "#     cp metaflow-demo/config.json ~/.metaflowconfig; \\\n",
+        "#   fi)\n",
+        "# %cd metaflow-demo"
       ]
     },
     {
@@ -86,8 +87,8 @@
       "source": [
         "import os\n",
         "os.environ['METAFLOW_USER'] = 'test'\n",
-        "os.environ['AWS_ACCESS_KEY_ID'] = 'XXXX'\n",
-        "os.environ['AWS_SECRET_ACCESS_KEY'] = 'YYYY'"
+        "os.environ['AWS_ACCESS_KEY_ID'] = input('aws_access_key_id: ')\n",
+        "os.environ['AWS_SECRET_ACCESS_KEY'] = input('aws_secret_access_key: ')"
       ]
     },
     {
@@ -127,6 +128,25 @@
       "outputs": [],
       "source": [
         "!python3 hyperparamtuning.py run"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "s3bucket = input('S3 bucket name w/out prefix s3://')\n",
+        "if len(s3bucket) != 0:\n",
+        "  print(\"adding bucket name to Metaflow's config.json\")\n",
+        "  metaflowconfig = {\n",
+        "    \"METAFLOW_DATASTORE_SYSROOT_S3\": \"s3://{}/metaflow\".format(s3bucket),\n",
+        "    \"METAFLOW_DATATOOLS_SYSROOT_S3\": \"s3://{}/metaflow/data\".format(s3bucket),\n",
+        "    \"METAFLOW_DEFAULT_DATASTORE\": \"s3\"    \n",
+        "  }\n",
+        "  with open('config.json', '+w') as configfile:\n",
+        "    configfile.write(json.dumps(metaflowconfig))"
       ]
     },
     {
